--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,9 @@
 
   <licenses>
     <license>
-      <name>EPL-2.0</name>
-      <url>https://www.eclipse.org/legal/epl-2.0/</url>
+      <name>Apache-2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
     </license>
   </licenses>
 
