[maven-release-plugin] prepare release release-1.0.1

--- a/search-api/pom.xml
+++ b/search-api/pom.xml
@@ -23,7 +23,7 @@ under the License.
   <parent>
     <groupId>eu.maveniverse.maven.mase</groupId>
     <artifactId>mase</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>search-api</artifactId>
