--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>eu.maveniverse.maven.mase</groupId>
   <artifactId>mase</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>pom</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -35,7 +35,7 @@
   <scm>
     <connection>scm:git:git@github.com:maveniverse/mase.git</connection>
     <developerConnection>scm:git:git@github.com:maveniverse/mase.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>release-1.0.1</tag>
     <url>https://github.com/maveniverse/mase</url>
   </scm>
 
@@ -50,7 +50,7 @@
   </ciManagement>
 
   <properties>
-    <project.build.outputTimestamp>2023-10-31T15:39:08Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2023-12-09T10:54:18Z</project.build.outputTimestamp>
 
     <!--
     Build time: latest Maven and LTS Java.
