[maven-release-plugin] prepare for next development iteration

--- a/search-backend-smo/pom.xml
+++ b/search-backend-smo/pom.xml
@@ -23,7 +23,7 @@ under the License.
   <parent>
     <groupId>eu.maveniverse.maven.mase</groupId>
     <artifactId>mase</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>search-backend-smo</artifactId>
