--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - env:
+          RESOLVER_GPG_KEY: ${{ secrets.RESOLVER_GPG_KEY }}
+          RESOLVER_GPG_KEY_PASS: ${{ secrets.RESOLVER_GPG_KEY_PASS }}
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -21,5 +24,5 @@ jobs:
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ github.sha }}
-      - run: ./mvnw install -e -B -V
+      - run: ./mvnw deploy -e -B -V
     
