--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,6 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - env:
-          RESOLVER_GPG_KEY: ${{ secrets.RESOLVER_GPG_KEY }}
-          RESOLVER_GPG_KEY_PASS: ${{ secrets.RESOLVER_GPG_KEY_PASS }}
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -25,4 +22,7 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ github.sha }}
       - run: ./mvnw deploy -e -B -V
+        env:
+          RESOLVER_GPG_KEY: ${{ secrets.RESOLVER_GPG_KEY }}
+          RESOLVER_GPG_KEY_PASS: ${{ secrets.RESOLVER_GPG_KEY_PASS }}
     
