--- a/search-api/pom.xml
+++ b/search-api/pom.xml
@@ -23,7 +23,7 @@ under the License.
   <parent>
     <groupId>eu.maveniverse.maven.mase</groupId>
     <artifactId>mase</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>search-api</artifactId>
